Refactor + Swagger up
